// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`DropdownButton rtl render component should be rendered correctly in RTL direction 1`] = `
<div
  class="g-space-compact g-space-compact-rtl g-space-compact-block g-dropdown-button"
>
  <button
    class="g-btn css-var-root g-btn-default g-btn-color-default g-btn-varig-outlined g-btn-rtl g-btn-compact-item g-btn-compact-first-item g-btn-compact-item-rtl"
    type="button"
  />
  <button
    class="g-btn css-var-root g-btn-default g-btn-color-default g-btn-varig-outlined g-btn-icon-only g-btn-rtl g-btn-compact-item g-btn-compact-last-item g-btn-compact-item-rtl g-dropdown-trigger g-dropdown-rtl"
    type="button"
  >
    <span
      class="g-btn-icon"
    >
      <span
        aria-label="ellipsis"
        class="gicon gicon-ellipsis"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="ellipsis"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
          />
        </svg>
      </span>
    </span>
  </button>
</div>
`;

exports[`DropdownButton should support href like Button 1`] = `
<div
  class="g-space-compact g-space-compact-block g-dropdown-button"
>
  <a
    aria-disabled="false"
    class="g-btn css-var-root g-btn-default g-btn-color-default g-btn-varig-outlined g-btn-compact-item g-btn-compact-first-item"
    href="https://ant.design"
    tabindex="0"
  />
  <button
    class="g-btn css-var-root g-btn-default g-btn-color-default g-btn-varig-outlined g-btn-icon-only g-btn-compact-item g-btn-compact-last-item g-dropdown-trigger"
    type="button"
  >
    <span
      class="g-btn-icon"
    >
      <span
        aria-label="ellipsis"
        class="gicon gicon-ellipsis"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="ellipsis"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
          />
        </svg>
      </span>
    </span>
  </button>
</div>
`;
